syntax="proto3";

package proto;

import "proto/common.proto";

option go_package = "cchoice/pb";

message ProductCategory {
   string id = 1;
   string category = 2;
   string subcategory = 3;
}

message GetProductCategoriesByPromotedRequest {
   int64 limit = 1;
   bool promoted_at_homepage = 2;
}

message ProductCategories {
   int64 length = 1;
   repeated ProductCategory product_category = 2;
}

service ProductCategoryService {
   rpc GetProductCategoryByID(IDRequest) returns (ProductCategory) {}
   rpc GetProductCategoriesByPromoted(GetProductCategoriesByPromotedRequest) returns (ProductCategories) {}
}
